Fix color in dark mode

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -55,7 +55,7 @@
     --muted-foreground: 221 5% 60%;
     --accent: 183 15% 25%;
     --accent-foreground: 221 5% 90%;
-    --destructive: 0 50% 30%;
+    --destructive: 0 50% 50%;
     --destructive-foreground: 221 5% 90%;
     --border: 221 20% 28%;
     --input: 221 20% 28%;
